testdata/golden/sema/invalid/ternary_non_bool_cond.sg
// scenario: ternary with non-boolean condition
fn bad_cond() -> int {
    let x: int = 42;
    return x ? 1 : 0;
}
